tests/negative/test_block_stmnt_nested.orb
fnc foo() () {
};

fnc main() () {
    block {
        { foo; }
    };
};